--- a/templates/false.html
+++ b/templates/false.html
@@ -17,9 +17,6 @@
             background-color: #f2f2f2;
             cursor: pointer;
         }
-        input[type="text"] {
-            width: 100%;
-        }
         .button {
   background-color: #4CAF50; /* Зеленый цвет */
   border: none;
@@ -31,11 +28,6 @@
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-}
-
-/* При наведении курсора */
-.button:hover {
-  background-color: #45a049;
 }
 table {
   border-collapse: collapse;
@@ -50,35 +42,33 @@ table {
 tr:hover td{
   border: 1px solid black;
 }
-
     </style>
 </head>
 <body>
-    <h1>Устройства</h1>
-    <button id="rootLinkButton" class="button">Активные</button>
+    <h1>Аварии</h1>
+     <button id="rootLinkButton" class="button">Активные</button>
 <button id="falseLinkButton" class="button">Закрытые</button>
 <button id="deviceLinkButton" class="button">Устройства</button>
     <table id="emailTable">
         <thead>
         <tr>
-            <th>id</th>
+            <th>ID dev</th>
             <th>subject</th>
             <th>addr</th>
-            <th>comment</th>
+            <th>alarm</th>
             <th>time</th>
             <th>occurred</th>
+            <th>comment</th>
+            <th>status</th>
+            <th>add comment</th>
         </tr>
         </thead>
         <tbody>
-        {% for email in data %}
+        {% for email in res %}
         <tr>
             {% for cell in email %}
             <td>{{ cell }}</td>
             {% endfor %}
-            <td>
-                <input type="text" class="newText" onchange="addNewText(this)">
-                <button onclick="addNewText(this)">Add</button>
-            </td>
         </tr>
         {% endfor %}
         </tbody>
@@ -86,14 +76,54 @@ tr:hover td{
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#emailTable').DataTable({
-                "paging": false,
-                "searching": true,
-                "info": false
-            });
-        });
+     <script>
+$(document).ready(function() {
+    var table = $('#emailTable').DataTable({
+        "paging": false,
+        "searching": true,
+        "info": false,
+        order: [[5, 'desc']],
+        "rowCallback": function(row, data) {
+            if (data[3] == "High Temp Alarm") {
+                $(row).css('background-color', '#F08080');
+            } else if (data[3] == "S5 Error") {
+                $(row).css('background-color', '#F0E68C');
+            } else if (data[3] == "OFFLINE") {
+                $(row).css('background-color', '#48D1CC');
+            }
+        }
+    });
+});
+    $('#emailTable tbody').on('mouseenter', 'tr', function () {
+        $(this).addClass('highlight');
+    });
+
+    $('#emailTable tbody').on('mouseleave', 'tr', function () {
+        $(this).removeClass('highlight');
+    });
+
+            function addNewTextON(input) {
+    var newText = $(input).val();  // Получаем значение input, на котором произошло изменение
+    var row = $(input).closest('tr');
+    var id = row.find('td:first').text();
+
+    fetch('/update-email', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({ id: id, newText: newText }),
+    })
+    .then(response => response.json())
+    .then(data => {
+        console.log('Update successful', data);
+        row.find('td:nth-last-child(3)').text(newText);
+    })
+    .catch(error => {
+        console.error('Update failed', error);
+    });
+}
+
 
         function addNewText(button) {
     var newText = $(button).prev('.newText').val();  // Получаем значение input в текущей строке
@@ -110,13 +140,34 @@ tr:hover td{
     .then(response => response.json())
     .then(data => {
         console.log('Update successful', data);
-        row.find('td:nth-last-child(2)').text(newText);
+        row.find('td:nth-last-child(3)').text(newText);
     })
     .catch(error => {
         console.error('Update failed', error);
     });
 }
-document.getElementById('rootLinkButton').onclick = function() {
+
+function addStatus(select) {
+    var selectedValue = $(select).val();  // Получаем выбранное значение из селекта
+    var row = $(select).closest('tr');
+    var id = row.find('td:first').text();
+    console.log(id,selectedValue);
+    fetch('/update-status', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({ id: id, selectedValue: selectedValue }),
+    })
+    .then(response => response.json())
+    .then(data => {
+        console.log('Update successful', data);
+    })
+    .catch(error => {
+        console.error('Update failed', error);
+    });
+    }
+    document.getElementById('rootLinkButton').onclick = function() {
     window.location.href = "/active";
 };
 document.getElementById('falseLinkButton').onclick = function() {
@@ -125,7 +176,6 @@ document.getElementById('falseLinkButton').onclick = function() {
 document.getElementById('deviceLinkButton').onclick = function() {
     window.location.href = "/devices";
 };
-
     </script>
 </body>
 </html>
