--- a/templates/emails.html
+++ b/templates/emails.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Emails</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
-     <script src="static/js/emails.js"></script>
-    <link rel="stylesheet" href="static/css/emails.css">
+
+	<head>
+<title>Emails</title>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+<script src="https://cdn.datatables.net/plug-ins/1.11.5/sorting/datetime-moment.js"></script>
+<script src="static/js/emails.js"></script>
+<link rel="stylesheet" href="static/css/emails.css">
 </head>
+
 <body>
     <h1>Аварии</h1>
      <button id="rootLinkButton" class="button">Активные</button>
